# healthcare-data-lakehouse

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/etl/: etl_manager.py
src/lineage/: lineage_tracker.py
src/quality/: data_quality.py
