[project]
name = "healthcare-data-lakehouse"
version = "1.0.0"
description = "HIPAA-compliant data lakehouse with medallion architecture and full lineage tracking"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Christopher Mangun", email = "cmangun@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
    "delta-spark>=3.0.0",
    "pyspark>=3.5.0",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
